<?xml version="1.0" encoding="utf-8"?>

<!-- not using this yet -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#ff234567"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Title and Subtitle -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/setup_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:id="@+id/setupSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:text="@string/setup_subtitle"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

    <!-- OK, SAVE, and EXIT Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </Button>
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </Button>

        <Button
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/exit"
            android:textAppearance="?android:attr/textAppearanceMedium">
        </Button>
    </LinearLayout>

    <!-- BEGIN customizable part of setup -->

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <!-- Use the following TableRow as the template for SPINNER setup items -->
        <TableRow>
            <TextView
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Participant code"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/spinParticipantCode"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Session code"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/spinSessionCode"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Block code"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/spinBlockCode"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Group code"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/spinGroupCode"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Number of phrases"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/numberOfPhrases"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Phrases file"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/phrasesFile"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="Entry mode"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/entryMode"
                android:layout_weight="1"
                android:gravity="left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>


    </TableLayout>
</LinearLayout>

